--- a/templates/words.html
+++ b/templates/words.html
@@ -9,6 +9,8 @@
 <body>
     <h1>{{ user_info.name }}</h1>
     <h2>{{ user_info.id }}</h2>
+    <h1>{{ user_info_2.name }}</h1>
+    <h2>{{ user_info_2.id }}</h2>
 
     {% if user_info.photo_url %}
         <img src="{{ user_info.photo_url }}" alt="用户照片" style="width: 200px; height: 200px;">
